# network-ops-demo

./: .cursorrules  .env.example  .gitignore  .gitmodules  AGENTS.md  BRANDING.md  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEMO_GUIDE.md  DEMO_GUIDE_TEMPLATE.md  DEMO_PLAN.md  Dockerfile.cloudrun  Dockerfile.cloudrun.simple  MCP_RESEARCH_NOTES.md  Makefile  ONBOARDING.md  PREREQUISITES.md  README.md  VALIDATION_REPORT.md  WELCOME_PROMPT.md  cloudbuild-sidecar.yaml  cloudbuild.yaml  create-demo.sh  dev  docker-compose.yml  otel-collector-config.yaml  preflight-check.sh  project-context.yaml.example  setup.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/agno/: __init__.py  coordinator.py  routes.py
backend/app/branding/: __init__.py  test_extraction.py
backend/app/elasticsearch/: __init__.py  client.py  geo_queries.py  models.py  query_builder.py  retriever_builder.py  search.py
backend/app/otel/: __init__.py  setup.py
backend/app/routes/: agent.py  agent_management.py  agno_demo.py  analytics.py  audit.py  branding.py  cases.py  cdp_lldp.py  geo_search.py  mcp.py  network_impact.py  network_meraki.py  network_netflow.py  network_telemetry.py  profiles.py  search.py  search_fields.py  search_simple.py  search_summary.py  tracking.py  visual_search.py  voice.py  workflow_outputs.py  workflows.py
backend/data/: profiles.json
backend/scripts/: load_serverless_ootb.py  test_error_handling.py  test_mcp_endpoint.py  test_multi_agent.py
backend/scripts/crawler/: README.md  __init__.py  create_elastic_docs_agent.py  elastic-docs-crawler.yml  index_elastic_docs.py  test_crawl.sh  validate_crawler_results.py
backend/scripts/generators/: __init__.py  (+7 more)
backend/tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_retriever_builder.py
(+340 files in other folders)
