[project]
name = "elastic-demo-starter-backend"
version = "0.1.0"
description = "Backend services for the Elastic Demo Starter"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-decouple>=3.8",
    "requests>=2.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",
    "elasticsearch>=8.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-elasticsearch>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "agno>=1.0.0",
    "sqlalchemy>=2.0.0",
    "openai>=1.0.0",
    "PyYAML>=6.0.0",
    "faker>=33.0.0",
]

[project.scripts]
elastic-demo-starter-backend = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
include = ["*.py", "*.pyi", "*.ipynb", "**/pyproject.toml"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "F403", "F401"]
extend-select = [
    "D", # pydocstyle
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "I", # sort imports
    "UP", # pyupgrade
    "Q", # flake8-quotes
    "B", # flake8-bugbear
    "B9", # flake8-bugbear "more opinionated" checks
    "SIM", # flake8-simplify
    "C90", # more complexity rules
    "RUF", # ruff dev rules
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.8",
]
